clean up and add back scaling health integration